fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ Primary use:
 .l1-txt1 {
   font-family: Poppins-Thin;
   font-size: 72px;
-  line-height: 6.0;
+  line-height: 1.5;
   color: rgba(255,255,255,0.5);
   text-transform: uppercase;
   letter-spacing: 10px;
